--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib-camel/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib-camel/spring-core-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib-camel/velocity-1.7.jar"/>
+	<classpathentry kind="lib" path="fj36-livraria.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
