--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,23 @@
 	<classpathentry kind="lib" path="lib-camel/spring-core-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib-camel/velocity-1.7.jar"/>
 	<classpathentry kind="lib" path="fj36-livraria.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/mysql-connector-java-5.1.28-bin.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/camel-http-2.14.1.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/camel-jdbc-2.14.1.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/camel-xstream-2.14.1.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/fluent-hc-4.3.6.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/httpclient-4.3.6.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/httpclient-cache-4.3.6.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/httpcore-4.3.3.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/httpmime-4.3.6.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/jettison-1.3.7.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/livro.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="lib-camel-polling/xstream-1.4.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
